--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.9,<3.13"
 license = {text = "MIT"}
 authors = [
-    {name = "Ashish Kalra", email = "ashish.kalra@example.com"}
+    {name = "Your Name", email = "your.email@example.com"}
 ]
 keywords = ["transcript", "processing", "field extraction", "AI", "natural language processing"]
 classifiers = [
