--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "automatic-goggles"
-version = "0.4.0"
-description = "A package for extracting structured fields from call transcripts with confidence scores"
+version = "0.5.0"
+description = "A package for extracting structured fields from call transcripts and evaluating conversation quality with confidence scores"
 readme = "README.md"
 requires-python = ">=3.9,<3.13"
 license = {text = "MIT"}
